--- a/css/style.css
+++ b/css/style.css
@@ -8,5 +8,9 @@ html{width:100%;height:100%;min-height:100%;font-size:10px}body{height:auto;min-
 div.jw-bottom-bar__container { display: none }
 div#jw-element-601732974 { display: none }
 div#jw-element-602486998 { display: none }
+div#jw-element-601732925 { display: none }
+div#jw-element-601732930 { display: none }
+div#jw-element-601732935 { display: none }
+div#jw-element-601732940 { display: none }
 
 /* compiled in: 0.364s */
