Fix perms, add contatti

--- a/css/style.css
+++ b/css/style.css
@@ -12,5 +12,6 @@ div#jw-element-601732925 { display: none }
 div#jw-element-601732930 { display: none }
 div#jw-element-601732935 { display: none }
 div#jw-element-601732940 { display: none }
+div#jw-element-602486994 { display: none }
 
 /* compiled in: 0.364s */
